# FrankTheLocalLLM-main

./: .env  .eslintrc.json  .gitignore  Makefile  README.md  TROUBLESHOOTING.md  agents.md  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  cypress.config.js  docker-compose.yml  eslint.config.js  frank_down.sh  frank_up.ps1  frank_up.sh  nuget.config  package-lock.json  package.json  playwright.config.js  run_all.sh  run_logged.sh  runall  runall.ps1  vitest.config.js
.devcontainer/: Dockerfile  devcontainer.json
app/: .env.local  README.md  app.js  esbuild.config.js  index.html  package-lock.json  package.json  server.js  sw.js  tailwind.config.cjs  vite.config.js
backend/: main.py  pyproject.toml  requirements.txt
benchmarks/: llm_baseline.json
docs/: README-local-dev.md  README-packaging.md
electron/: main.js  package-lock.json  package.json  preload.cjs  preload.js
lite/: .env.example  requirements.txt
logs/: backend.pid  celery_beat.pid  celery_worker.pid  frontend.pid
models/: README.md
scripts/: README.md  backend.sh  build_nativefier.sh  common.sh  compare_benchmarkdotnet.py  compare_latency.py  controller.sh  ensure_env.sh  frontend.sh  install_deps.ps1  install_deps.sh  logs.sh  master.sh  measure_latency.py  model.sh  run.ps1  run.sh  run_backend.sh  run_celery.sh  run_celery_beat.sh  run_celery_worker.sh  run_frontend.sh  run_net.sh  run_ollama.sh  run_redis.sh  test_pipeline.sh  view.sh
src/: ConsoleAppSolution.sln
tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri/src/: main.rs
tauri/wix/: file-association.wxs
(+134 files in other folders)
