[package]
name = "tauri"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
include_dir = "0.7"
tauri = { version = "1", features = ["api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
clap = { version = "4", features = ["derive"] }
tauri-plugin-single-instance = "2"
